--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ section {
     font-size: 40px;
     font-weight: 700;
     font-family: var(--heading-font);
-    color: black;
+    color: #4a4a4a;
     margin-top: 10px;
 }
 .row1 .toggle-slider i {
@@ -405,6 +405,83 @@ section {
 }
 
 /* Product End */
+/* Footer */
+.footer {
+    margin-top: 200px;
+}
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    flex-wrap: wrap ;
+}
+.col-1-footer .logo-footer {
+    font-family: var(--heading-font);
+    font-size: 50px;
+    color: var(--third-color);
+    font-weight: 700;
+}
+.logo-footer .red {
+    color: var(--main-color);
+}
+.logo-footer .white {
+    color: var(--second-color)
+}
+.col-1-footer .subheading-footer {
+    font-size: 20px;
+    margin-top: 20px;
+    width: 400px;
+}
+.socmed-icon {
+    font-size: 3rem;
+    color: var(--main-color);
+    margin: 20px 5px;
+}
+.col-1-footer .copy {
+    margin-top: 50px;
+}
+.col-2-footer h3, .col-3-footer h3, .col-4-footer h3, .col-5-footer h3 {
+    font-size: 30px;
+    font-family: var(--heading-font);
+    font-family: 700;
+}
+.col-2-footer ul, .col-3-footer ul, .col-4-footer ul {
+    margin-top: 20px;
+}
+.col-2-footer ul li, .col-3-footer ul li, .col-4-footer ul li {
+    margin-top: 10px;
+}
+.col-2-footer li a, .col-3-footer li a, .col-4-footer li a {
+    font-size: 18px;
+    color: #4a4a4a;
+}
+.col-5-footer p {
+    margin-top: 30px;
+    font-size: 18px;
+}
+.form-input {
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.103);
+    margin-top: 50px;
+    padding: 20px 30px;
+}
+.form-input input {
+    border: none;
+}
+.form-input input:focus {
+    outline: none;
+}
+.form-input .btn-footer {
+    background-color: var(--second-color);
+    color: var(--third-color);
+    padding: 10px 25px;
+    border-radius: 50px;
+}
+
+
+
+
+/* Footer */
 @media screen and (max-width: 991px) {
     .navbar .nav-wrapper {
         padding: 0 20px;
@@ -450,6 +527,7 @@ section {
     }
     .menu-wrapper .menu .menu-item {
         margin: 30px;
+        /* margin: 30px 0; */
     }
     .menu .menu-item .menu-link {
         color: var(--third-color);
@@ -459,5 +537,20 @@ section {
         font-size: 2.5rem;
         color: var(--main-color);
         transition: 0.5s;
+    }
+
+    .footer {
+        padding: 10px 20px;
+    }
+    .footer .footer-wrapper {
+        justify-content: start;
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .footer .footer-wrapper {
+        justify-content: start;
+        gap: 30px;
     }
 }
